apps/gaming/xmage/controller/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xmage-deployment
  labels:
    app: xmage-deployment
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: xmage-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: xmage-pod
    spec:
      hostAliases:
        - ip: 0.0.0.0
          hostnames:
            - xmage.kdmorris.dev
      containers:
        - name: xmage 
          image: woodsjail/xmage:1.4.58-dev
          ports: 
            - containerPort: 17171
              name: xmage-1
            - containerPort: 17179
              name: xmage-2
          volumeMounts:
            - mountPath: /xmage/mage-server/db
              name: config-volume # generated via configMapGenerator from kustomization file
      volumes:
        - name: config-volume
          persistentVolumeClaim: # stores /cache/ntfy in defined pv
            claimName: xmage-pvc
