apps/gaming/xmage/controller/service.yml
apiVersion: v1
kind: Service
metadata:
  name: xmage-svc  
  namespace: ntfy
spec:
  ports:
    - name: xmage-17171
      protocol: TCP
      port: 17171
      targetPort: xmage-1
    - name: xmage-17179
      protocol: TCP
      port: 17179
      targetPort: xmage-2
  type: ClusterIP
  selector:
    app: xmage-pod
