apps/gaming/xmage/controller/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xmage-route
  annotations:
    external-dns.alpha.kubernetes.io/hostname: xmage.kdmorris.dev
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: tailscale-gateway
      namespace: tailscale
  hostnames:
    - "xmage.kdmorris.dev"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - group: ""
        kind: Service
        name: xmage-1
        port: 17171
